SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Answer__c/CPQ_Playbook_Answer__c.object-meta.xml
<CustomObject>
    <description>Child of Quote object. Houses responses/answers to a specific CPQ Playbook Question</description>
    <label>CPQ Playbook Answer</label>
    <nameField>
        <label>Playbook Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>