SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Answer__c/fields/CPQ_Playbook_Question__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Question__c</fullName>
    <description>CPQ Playbook Question the record answers</description>
    <label>CPQ Playbook Question</label>
    <referenceTo>CPQ_Playbook_Question__c</referenceTo>
    <relationshipLabel>CPQ Playbook Answers</relationshipLabel>
    <relationshipName>CPQ_Playbook_Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>