SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Answer__c/fields/HasBeenTouched__c.field-meta.xml
<CustomField>
    <fullName>HasBeenTouched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the answer was &quot;touched&quot; in CPQ before the save</description>
    <label>HasBeenTouched</label>
    <type>Checkbox</type>
</CustomField>