SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Answer__c/fields/Selected_Records_String__c.field-meta.xml
<CustomField>
    <fullName>Selected_Records_String__c</fullName>
    <description>Stores stringified JSON list of sObject records selected in record lookup query</description>
    <inlineHelpText>Stores stringified JSON list of sObject records selected in record lookup query</inlineHelpText>
    <label>Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>