SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Answer__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <description>If related question answer type is &apos;Picklist&apos;, &apos;Multi-Select Picklist&apos;, &apos;Text&apos;, or &apos;Text Area&apos;, value for answer stored here</description>
    <label>Value (Text)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>